--- a/index.html
+++ b/index.html
@@ -80,13 +80,71 @@
         <img src="./resources/Ellipse 1.png" alt="" id="elli" />
         <div class="year-p">
           <span id="year">2024</span>
-          <p class="dolor">Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod.</p>
+          <p class="dolor">
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+            euismod. <br />
+            <br />
+            <img src="./resources/Group 96.png" alt="" />
+          </p>
         </div>
       </div>
-      <div>
-
-
-        
+      <div class="function">
+        <div>
+          <h4 class="what">WHAT IS FUNCTIONAL</h4>
+          <h1 class="holiday"><span class="span">Holidays</span> Sale 50%</h1>
+          <p class="holiday-speech">
+            'Tis the season of joy and giving, and we're delighted to spread the
+            holiday cheer with our <br />
+            exclusive sale! Dive into the festivities and unwrap incredible
+            savings <br />
+            that will make your celebrations even more special. Happy holidays
+            and happy shopping!
+          </p>
+        </div>
+      </div>
+      <div class="red-total">
+        <img class="red-image" src="resources/rectangle2.png" alt="" />
+        <img class="box" src="resources/Group 75.png" alt="" />
+        <img class="women" src="resources/Rectangle 1.png" alt="" />
+        <p class="circle-two"></p>
+        <img class="discount" src="resources/Group 44.png" alt="" />
+      </div>
+      <div class="big-best-gift">
+        <div>
+          <p class="gift">THE BEST GIFTS</p>
+          <h1 style="font-family: Merriweather">Our Awesome Portfolio</h1>
+          <p style="width: 670px">
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+            euismod.
+          </p>
+        </div>
+        <div class="imagess">
+          <div>
+            <img src="./resources/Rectangle 3.png" alt="" class="image-three" />
+            <img src="./resources/Rectangle 4.png" alt="" class="image-three" />
+            <img src="./resources/Rectangle 5.png" alt="" class="image-three" />
+          </div>
+          <div>
+            <img src="./resources/Rectangle 6.png" alt="" class="image-three" />
+            <img src="./resources/Rectangle 7.png" alt="" class="image-three" />
+            <img src="./resources/Rectangle 8.png" alt="" class="image-three" />
+          </div>
+        </div>
+      </div>
+      <div class="subscribe">
+        <div>
+          <img src="./resources/Group 61.png" alt="" id="email" />
+          <h1 class="news-letter">Subscribe Newsletter</h1>
+        </div>
+        <div class="dolor-two">
+          <p>
+            Dolor sit amet consectetur. Consequat eget consectetur maecenas sed
+            molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
+            euismod.
+          </p>
+        </div>
       </div>
     </main>
     <footer></footer>
