--- a/index.html
+++ b/index.html
@@ -144,9 +144,40 @@
             molestie malesuada. Ipsum sed sodales risus ut pellentesque vel
             euismod.
           </p>
+          <div class="user">
+            <input
+              type="email"
+              name="user@gmail.com"
+              placeholder="user@gmail.com"
+              class="user-btn"
+            />
+            <button class="sub-btn">Subscribe</button>
+          </div>
         </div>
       </div>
     </main>
-    <footer></footer>
+    <footer>
+      <div>
+        <div>
+          <div class="footer"></div>
+          <p class="big">
+            44, Big Building Roosevelt Street <br />
+            Beach Gardens Florida 33410
+          </p>
+          <hr class="line" />
+          <p class="number">+00 123 584 124</p>
+          <p class="website">www.website.com</p>
+        </div>
+        <div class="logo">
+          <img src="resources/Facebook.png" alt="" class="logoo"/>
+          <img src="resources/Instagram.png" alt=""  class="logoo"/>
+          <img src="resources/Linkedin.png" alt=""  class="logoo"/>
+        </div>
+        <div>
+          <p class="all">2017,All Rights Reserved.</p>
+          <p class="un">Unsubscribe</p>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
